test/correct/Import.hs
module Import where

import Export

main :: Int
main = three
