test/typeerrors/Examples/ExprConstructor.hs
module ExprConstructor where

f :: Int
f = (:)
